display correct theta and r